fix: lab-3 fix tests and layers